fixed ar-nav page alignment

--- a/public/styles/ar-nav.css
+++ b/public/styles/ar-nav.css
@@ -13,7 +13,6 @@ body {
     /* general styles */
     padding: 30px;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
 }
 
 /* overlay styles, all needed */
